[gd_scene load_steps=20 format=3 uid="uid://branehk1va4pg"]

[ext_resource type="Script" path="res://Scenes/Enemies/turtle_enemy.gd" id="1_526ke"]
[ext_resource type="Texture2D" uid="uid://bj3ijmnp8k718" path="res://assets/Enemies/New Piskel.png" id="1_wklca"]
[ext_resource type="Texture2D" uid="uid://cx3cp3vpx0q2l" path="res://assets/Enemies/turtle_walking.png" id="2_46y3d"]
[ext_resource type="AudioStream" uid="uid://nan2umchu5js" path="res://assets/Sounds/Dragon Hurt.wav" id="4_vjdoi"]

[sub_resource type="AtlasTexture" id="AtlasTexture_v03bk"]
atlas = ExtResource("1_wklca")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_nue54"]
atlas = ExtResource("1_wklca")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_brxvm"]
atlas = ExtResource("1_wklca")
region = Rect2(0, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_i3yy4"]
atlas = ExtResource("1_wklca")
region = Rect2(32, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_iol0w"]
atlas = ExtResource("1_wklca")
region = Rect2(0, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_xe2c7"]
atlas = ExtResource("1_wklca")
region = Rect2(32, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_gvsqt"]
atlas = ExtResource("2_46y3d")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_3tfgc"]
atlas = ExtResource("2_46y3d")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_lu0yd"]
atlas = ExtResource("2_46y3d")
region = Rect2(64, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_mqk2a"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_v03bk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nue54")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_brxvm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i3yy4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_iol0w")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xe2c7")
}],
"loop": true,
"name": &"Death",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_gvsqt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3tfgc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lu0yd")
}],
"loop": true,
"name": &"Walk",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_s422w"]
size = Vector2(120, 114)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_qx7af"]
size = Vector2(74, 116)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_f3e0x"]
size = Vector2(138, 119)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ivuux"]
bg_color = Color(1, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_svrm4"]
bg_color = Color(0, 1, 0, 1)

[node name="Turtle Enemy" type="CharacterBody2D" groups=["Enemies"]]
script = ExtResource("1_526ke")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
scale = Vector2(5, 5)
sprite_frames = SubResource("SpriteFrames_mqk2a")
animation = &"Walk"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2(6, -2)
shape = SubResource("RectangleShape2D_s422w")

[node name="right" type="RayCast2D" parent="."]
position = Vector2(48, -63)
target_position = Vector2(40, 0)

[node name="left" type="RayCast2D" parent="."]
position = Vector2(48, -63)
target_position = Vector2(-40, 0)

[node name="PlayerDetectionLeft" type="Area2D" parent="."]

[node name="Left" type="CollisionShape2D" parent="PlayerDetectionLeft"]
visible = false
position = Vector2(-37, -19)
shape = SubResource("RectangleShape2D_qx7af")

[node name="PlayerDetectionRight" type="Area2D" parent="."]
position = Vector2(74, 0)

[node name="Right" type="CollisionShape2D" parent="PlayerDetectionRight"]
visible = false
position = Vector2(-37, -16.5)
shape = SubResource("RectangleShape2D_qx7af")

[node name="Area2D" type="Area2D" parent="." groups=["Enemies"]]
position = Vector2(-22, 0)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(28, -17.5)
shape = SubResource("RectangleShape2D_f3e0x")

[node name="EnemyBar" type="ProgressBar" parent="Area2D"]
unique_name_in_owner = true
offset_left = -13.0
offset_top = -68.0
offset_right = 40.0
offset_bottom = -63.0
theme_override_styles/background = SubResource("StyleBoxFlat_ivuux")
theme_override_styles/fill = SubResource("StyleBoxFlat_svrm4")
step = 1.0
value = 100.0
show_percentage = false
metadata/_edit_use_anchors_ = true

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_vjdoi")

[node name="FireballTimer" type="Timer" parent="."]
wait_time = 3.0
autostart = true

[node name="FireballTimer2" type="Timer" parent="."]
autostart = true

[connection signal="timeout" from="FireballTimer" to="." method="_on_fireball_timer_timeout"]
[connection signal="timeout" from="FireballTimer2" to="." method="_on_fireball_timer_2_timeout"]
